--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="myNewProjectApp">
+  <body ng-app="resetpwdApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">myNewProject</a>
+            <a class="navbar-brand" href="#/">resetpwd</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -74,14 +74,6 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <script src="../bower_components/angular/angular.js"></script>
-        <script src="../bower_components/angular-animate/angular-animate.js"></script>
-        <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
-        <script src="../bower_components/angular-mocks/angular-mocks.js"></script>
-        <script src="../bower_components/angular-resource/angular-resource.js"></script>
-        <script src="../bower_components/angular-route/angular-route.js"></script>
-        <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <script src="../bower_components/angular-touch/angular-touch.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
