--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -98,6 +98,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/resetpwd.js"></script>
         <script src="scripts/filters/myfilter.js"></script>
         <!-- endbuild -->
 </body>
