--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -26,7 +26,7 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="bs-navbar bs-navbar-default" role="navigation">
-        <img class="logo" src="./images/logo2.png" alt="">
+        <a href="#/"><img class="logo" src="./images/logo2.png" alt=""></a>
         <ul class="bs-nav bs-navbar-nav">
           <li class="active"><a href="#/">首页</a></li>
           <li><a ng-href="#/about">实验课程</a></li>
@@ -87,12 +87,12 @@
         <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="../bower_components/angular-touch/angular-touch.js"></script>
         <script src="../bower_components/angular-notify/dist/angular-notify.js"></script>
-        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.js"></script>
 
         <!-- jquery文件 -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <!-- bootstrap 文件 -->
         <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
