--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -93,7 +93,7 @@
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <!-- bootstrap 文件 -->
         <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.js"></script>
+        <script src="scripts/ui-bootstrap-tpls-0.12.1.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
