--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -38,7 +38,7 @@
           <li class="active" ng-show="!adminConfig.isLogin"><a href="#/login">登录</a></li>
           <li class="active dropdown-toggle" dropdown-toggle>
             <a ng-show="adminConfig.isLogin" href="#/">
-              {{adminConfig.username}}
+              {{adminConfig.userName}}
               <span class="caret"></span>
               <span class="sr-only">Split button!</span>
             </a>
