get course view course

--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/setting.css">
     <link rel="stylesheet" href="styles/uploadlab.css">
+    <link rel="stylesheet" href="styles/course.css">
     <!-- endbuild -->
   </head>
   <body ng-app="myNewProjectApp" ng-controller="AppCtrl" ng-init="appFunc.init()">
@@ -67,6 +68,7 @@
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!--
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
@@ -76,6 +78,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+    -->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -108,6 +111,7 @@
         <script src="scripts/controllers/setting.js"></script>
         <script src="scripts/filters/myfilter.js"></script>
         <script src="scripts/controllers/uploadlab.js"></script>
+        <script src="scripts/controllers/course.js"></script>
         <!-- endbuild -->
 </body>
 </html>
