--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html class="no-js">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -33,8 +33,8 @@
         <a href="#/"><img class="logo" src="./images/logo2.png" alt=""></a>
         <ul class="bs-nav bs-navbar-nav">
           <li class="active"><a href="#/">首页</a></li>
-          <li><a ng-href="#/about">实验课程</a></li>
-          <li><a ng-href="#/">我的课程</a></li>
+          <!-- <li><a ng-href="#/about">实验课程</a></li>
+          <li><a ng-href="#/">我的课程</a></li> -->
           <li><a ng-href="#/">上传文件</a></li>
           <li><a ng-show="adminConfig.userType == 1" ng-href="#/uploadlab">上传课程</a></li>
         </ul>
@@ -112,6 +112,7 @@
         <script src="scripts/filters/myfilter.js"></script>
         <script src="scripts/controllers/uploadlab.js"></script>
         <script src="scripts/controllers/course.js"></script>
+        <script src="scripts/controllers/test.js"></script>
         <!-- endbuild -->
 </body>
 </html>
