--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -32,7 +32,7 @@
       <div class="bs-navbar bs-navbar-default" role="navigation">
         <a href="#/"><img class="logo" src="./images/logo2.png" alt=""></a>
         <ul class="bs-nav bs-navbar-nav">
-          <li class="active"><a href="#/">首页</a></li>
+          <li class="active"><a href="#/">课程</a></li>
           <!-- <li><a ng-href="#/about">实验课程</a></li>
           <li><a ng-href="#/">我的课程</a></li> -->
           <li><a ng-href="#/">上传文件</a></li>
