--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/setting.css">
     <link rel="stylesheet" href="styles/uploadlab.css">
     <link rel="stylesheet" href="styles/course.css">
+    <link rel="stylesheet" href="styles/test.css">
     <!-- endbuild -->
   </head>
   <body ng-app="myNewProjectApp" ng-controller="AppCtrl" ng-init="appFunc.init()">
