--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/uploadlab.css">
     <link rel="stylesheet" href="styles/course.css">
     <link rel="stylesheet" href="styles/test.css">
+    <link rel="stylesheet" href="styles/task.css">
     <!-- endbuild -->
   </head>
   <body ng-app="myNewProjectApp" ng-controller="AppCtrl" ng-init="appFunc.init()">
@@ -114,6 +115,7 @@
         <script src="scripts/controllers/uploadlab.js"></script>
         <script src="scripts/controllers/course.js"></script>
         <script src="scripts/controllers/test.js"></script>
+        <script src="scripts/controllers/task.js"></script>
         <!-- endbuild -->
 </body>
 </html>
