--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -2,6 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
@@ -98,7 +99,9 @@
         <script src="../bower_components/angular-notify/dist/angular-notify.js"></script>
         <!-- angular上传文件 -->
         <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>
-
+        <!-- 下载文件 -->
+        <script src="../bower_components/FileSaver/FileSaver.min.js"></script>
+        <script src="../bower_components/angular-down-file-directive/dist/angular-down-file-directive.js"></script>
 
         <!-- jquery文件 -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
