--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -100,8 +100,11 @@
         <!-- angular上传文件 -->
         <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>
         <!-- 下载文件 -->
-        <script src="../bower_components/FileSaver/FileSaver.min.js"></script>
-        <script src="../bower_components/angular-down-file-directive/dist/angular-down-file-directive.js"></script>
+        <!-- <script src="../bower_components/FileSaver/FileSaver.min.js"></script>
+        <script src="../bower_components/angular-down-file-directive/dist/angular-down-file-directive.js"></script> -->
+        <!-- pdf viewer -->
+        <script src="../bower_components/angular-pdf/dist/angular-pdf.js"></script>
+
 
         <!-- jquery文件 -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -119,6 +122,8 @@
         <script src="scripts/controllers/course.js"></script>
         <script src="scripts/controllers/test.js"></script>
         <script src="scripts/controllers/task.js"></script>
+        <script src="scripts/controllers/checking.js"></script>
+        <script src="scripts/controllers/marking.js"></script>
         <!-- endbuild -->
 </body>
 </html>
