--- a/my-new-project/app/index.html
+++ b/my-new-project/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/course.css">
     <link rel="stylesheet" href="styles/test.css">
     <link rel="stylesheet" href="styles/task.css">
+    <link rel="stylesheet" href="styles/marking.css">
     <!-- endbuild -->
   </head>
   <body ng-app="myNewProjectApp" ng-controller="AppCtrl" ng-init="appFunc.init()">
@@ -38,7 +39,7 @@
           <li class="active"><a href="#/">课程</a></li>
           <!-- <li><a ng-href="#/about">实验课程</a></li>
           <li><a ng-href="#/">我的课程</a></li> -->
-          <li><a ng-href="#/">上传文件</a></li>
+          <!-- <li><a ng-href="#/">上传文件</a></li> -->
           <li><a ng-show="adminConfig.userType == 1" ng-href="#/uploadlab">上传课程</a></li>
         </ul>
         <ul class="bs-nav bs-navbar-right" dropdown>
